--- a/canvas.html
+++ b/canvas.html
@@ -69,7 +69,7 @@
             <div class="row ">
                 <div class="col header__navbar-mid__describe">
                     <h2 class="header__navbar-mid__text-huge ">Premium Classic Shoe</h2>
-                    <p class="header__navbar-mid__text-small ">A New Collection of Summer 2019.</p>
+                    <p class="header__navbar-mid__text-small ">A New OT Collection of Summer 2019.</p>
                 </div>
             </div>
 
