--- a/canvas.html
+++ b/canvas.html
@@ -44,7 +44,7 @@
                                 HELP
                                 <i class="fas fa-angle-down header__navbar-icon"></i>
                             </li>
-                            <li class="header__navbar__menu-iteams">CONTAC</li>
+                            <li class="header__navbar__menu-iteams">CONTACT</li>
                         </ul>
     
                         <!-- acount -->
@@ -61,7 +61,7 @@
                     </div>
                 </div>
     
-    </div>
+        </div>
      <!-- end navigation -->
 
     <div class="header__navbar-mid">
@@ -80,7 +80,6 @@
                     <button type="button" class="btn btn-shop btn-white--women" style="margin: 0 2px;">SHOP WOMEN</button>
                 </div>
             </div>
-
         </div>
     </div>
     <!-- releitionship -->
